test_regress/t/t_assert_always_unbounded_bad.out
%Error: t/t_assert_always_unbounded_bad.v:13:35: s_always range must be bounded (IEEE 1800-2023 16.12.11)
                                               : ... note: In instance 't'
   13 |   assert property (@(posedge clk) s_always a);
      |                                   ^~~~~~~~
        ... See the manual at https://verilator.org/verilator_doc.html?v=latest for more assistance.
%Error: t/t_assert_always_unbounded_bad.v:14:35: s_always range must be bounded (IEEE 1800-2023 16.12.11)
                                               : ... note: In instance 't'
   14 |   assert property (@(posedge clk) s_always [2:$] a);
      |                                   ^~~~~~~~
%Error: t/t_assert_always_unbounded_bad.v:18:35: always range low bound must be a constant expression (IEEE 1800-2023 16.12.11)
                                               : ... note: In instance 't'
   18 |   assert property (@(posedge clk) always [$:5] a);
      |                                   ^~~~~~
%Error: Exiting due to
